# carry

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
app/: app.js  index.html  manifest.webmanifest  styles.css
cloudflare-relay/: wrangler.jsonc
cloudflare-relay/src/: index.js
lib/: app-server.js  board.js  checkpoints.js  crypto.js  firewall.js  folder-picker.js  fsx.js  manifest.js  memoryMerge.js  p2p.js  private-state.js  prompt.js  relay.js  storage-health.js  sync-engine.js  sync.js  transfer-store.js  transport.js  tunnel.js  websocket.js
relay/: server.js
scripts/: build-windows.ps1  prepare-native.js  test-all.js
scripts/windows/: Carry.manifest  CarrySetup.cs  CarryUninstall.cs  WindowsShell.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
test/: app-itest.js  cloudflare-relay-itest.js  firewall-itest.js  lan-itest.js  large-project-itest.js  launcher-itest.js  p2p-itest.js  package-itest.js  relay-itest.js  remote-itest.js  resume-itest.js  security-itest.js  setup-itest.js  smoke.js  staged-sync-itest.js  storage-health-itest.js  sync-itest.js  transfer-store-itest.js  tunnel-itest.js  ui-itest.js
